--- a/index.html
+++ b/index.html
@@ -4,34 +4,40 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Omar Obaidi ePortfolio</title>
+  <style>
+    body { 
+      font-family: Arial, sans-serif; 
+      margin: 40px; 
+      background: #f7f9fb; 
+      color: #222;
+    }
+    h1 { color: #004080; }
+    h2 { color: #0066cc; }
+    a { color: #0077cc; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+  </style>
 </head>
-<body style="font-family: Arial, sans-serif; margin: 40px;">
+<body>
   <h1>Omar Obaidi – CS 499 ePortfolio</h1>
   <p><strong>Final CS 499 ePortfolio Submission – Southern New Hampshire University</strong></p>
 
-  <h2>📄 Included Deliverables</h2>
+  <h2>Included Deliverables</h2>
   <ul>
     <li>Professional Self-Assessment</li>
     <li>Artifact Narratives (Software Design & Engineering, Algorithms & Data Structures, Databases)</li>
     <li>Code Review Video (hosted on Google Drive)</li>
   </ul>
 
-  <h2>🔗 Links</h2>
-  <p>
-    <strong>GitHub Repository:</strong>
-    <a href="https://github.com/aobaidi92/OmarObaidi_ePortfolio" target="_blank">
-      View Repository
-    </a>
+  <h2>Links</h2>
+  <p><strong>GitHub Repository:</strong> 
+    <a href="https://github.com/aobaidi92/OmarObaidi_ePortfolio" target="_blank">View on GitHub</a>
   </p>
 
-  <p>
-    <strong>Code Review Video:</strong>
-    <a href="https://drive.google.com/file/d/1gPffHO0Hp5P0YkUqeS_vsaE30XgG8fkE/view?usp=drive_link" target="_blank">
-      Watch on Google Drive
-    </a>
+  <p><strong>Code Review Video:</strong> 
+    <a href="https://drive.google.com/file/d/1gPffHO0Hp5P0YkUqeS_vsaE30XgG8fkE/view?usp=drive_link" target="_blank">Watch on Google Drive</a>
   </p>
 
-  <h2>🧾 Downloads</h2>
+  <h2>Downloads</h2>
   <ul>
     <li><a href="OmarObaidi_CS499_ProfessionalSelfAssessment.docx">Professional Self-Assessment (DOCX)</a></li>
     <li><a href="OmarObaidi_CS499_Narrative_ArtifactNarratives.docx">Artifact Narratives (DOCX)</a></li>
@@ -40,3 +46,4 @@
   <p><em>Developed and submitted by Omar Obaidi, 2025.</em></p>
 </body>
 </html>
+
