--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <h2>Links</h2>
   <p><strong>GitHub Repository:</strong> 
-    <a href="https://github.com/aobaidi92/OmarObaidi_ePortfolio" target="_blank">View on GitHub</a>
+    <a href="https://github.com/aobaidi92/OmarObaidi_ePortfolio" target="_blank">View Repository</a>
   </p>
 
   <p><strong>Code Review Video:</strong> 
