--- a/index.html
+++ b/index.html
@@ -1,49 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Omar Obaidi ePortfolio</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Omar Obaidi – CS 499 ePortfolio</title>
   <style>
-    body { 
-      font-family: Arial, sans-serif; 
-      margin: 40px; 
-      background: #f7f9fb; 
-      color: #222;
+    :root{
+      --snhu-blue:#003A70;
+      --snhu-gold:#FDB913;
+      --ink:#1e293b;
+      --muted:#667085;
+      --bg:#f6f8fb;
+      --card:#ffffff;
+      --shadow:0 8px 24px rgba(2,16,43,.08);
+      --radius:16px;
     }
-    h1 { color: #004080; }
-    h2 { color: #0066cc; }
-    a { color: #0077cc; text-decoration: none; }
-    a:hover { text-decoration: underline; }
+    *{box-sizing:border-box}
+    body{
+      margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+      color:var(--ink); background:var(--bg);
+    }
+    /* Header */
+    .hero{
+      background:linear-gradient(135deg,var(--snhu-blue),#2162a3);
+      color:#fff; padding:48px 20px;
+    }
+    .container{max-width:980px; margin:0 auto; padding:0 20px;}
+    .hero h1{margin:0 0 6px 0; font-size:clamp(28px,4vw,40px); letter-spacing:.3px}
+    .hero p{margin:0; opacity:.95; font-size:clamp(14px,2.2vw,18px)}
+    .badge{display:inline-block; margin-top:14px; background:rgba(253,185,19,.15); color:#fff;
+      border:1px solid rgba(253,185,19,.5); padding:6px 10px; border-radius:999px; font-weight:600}
+    /* Layout */
+    .grid{display:grid; gap:20px; grid-template-columns: 1fr; margin:28px 0 48px}
+    @media (min-width:900px){ .grid{grid-template-columns: 2fr 1fr;} }
+    .card{
+      background:var(--card); border-radius:var(--radius); padding:22px 22px; box-shadow:var(--shadow);
+    }
+    h2{margin:0 0 14px; font-size:22px; color:var(--snhu-blue)}
+    p, li{line-height:1.55}
+    ul{margin:10px 0 0 18px}
+    .list-tight li{margin:6px 0}
+    /* Link buttons */
+    .btn{
+      display:inline-flex; align-items:center; gap:8px;
+      background:var(--snhu-blue); color:#fff; text-decoration:none; padding:10px 14px;
+      border-radius:10px; font-weight:600;
+    }
+    .btn.alt{background:var(--snhu-gold); color:#1a1a1a}
+    .btn-row{display:flex; flex-wrap:wrap; gap:10px; margin-top:12px}
+    a{color:#0b63d1}
+    a:hover{opacity:.9}
+    footer{padding:28px 20px; color:var(--muted); text-align:center}
   </style>
 </head>
 <body>
-  <h1>Omar Obaidi – CS 499 ePortfolio</h1>
-  <p><strong>Final CS 499 ePortfolio Submission – Southern New Hampshire University</strong></p>
+  <!-- HEADER -->
+  <header class="hero">
+    <div class="container">
+      <h1>Omar Obaidi – CS 499 ePortfolio</h1>
+      <p>Southern New Hampshire University • Computer Science Capstone</p>
+      <div class="badge">Final Project Submission</div>
+    </div>
+  </header>
 
-  <h2>Included Deliverables</h2>
-  <ul>
-    <li>Professional Self-Assessment</li>
-    <li>Artifact Narratives (Software Design & Engineering, Algorithms & Data Structures, Databases)</li>
-    <li>Code Review Video (hosted on Google Drive)</li>
-  </ul>
+  <!-- CONTENT -->
+  <main class="container">
+    <div class="grid">
+      <!-- Left column -->
+      <section class="card">
+        <h2>Included Deliverables</h2>
+        <ul class="list-tight">
+          <li><strong>Professional Self-Assessment</strong> summarizing program outcomes and strengths</li>
+          <li><strong>Artifact Narratives</strong> (Software Design & Engineering, Algorithms & Data Structures, Databases)</li>
+          <li><strong>Code Review Video</strong> (hosted on Google Drive)</li>
+        </ul>
 
-  <h2>Links</h2>
-  <p><strong>GitHub Repository:</strong> 
-    <a href="https://github.com/aobaidi92/OmarObaidi_ePortfolio" target="_blank">View Repository</a>
-  </p>
+        <h2 style="margin-top:22px">Quick Links</h2>
+        <div class="btn-row">
+          <a class="btn" href="https://github.com/aobaidi92/OmarObaidi_ePortfolio" target="_blank" rel="noopener">View Repository</a>
+          <a class="btn alt" href="https://drive.google.com/file/d/1gPffHO0Hp5P0YkUqeS_vsaE30XgG8fkE/view?usp=drive_link" target="_blank" rel="noopener">Watch Code Review</a>
+        </div>
+      </section>
 
-  <p><strong>Code Review Video:</strong> 
-    <a href="https://drive.google.com/file/d/1gPffHO0Hp5P0YkUqeS_vsaE30XgG8fkE/view?usp=drive_link" target="_blank">Watch on Google Drive</a>
-  </p>
+      <!-- Right column -->
+      <aside class="card">
+        <h2>Downloads</h2>
+        <ul class="list-tight">
+          <li><a href="OmarObaidi_CS499_ProfessionalSelfAssessment.docx">Professional Self-Assessment (DOCX)</a></li>
+          <li><a href="OmarObaidi_CS499_Narrative_ArtifactNarratives.docx">Artifact Narratives (DOCX)</a></li>
+        </ul>
 
-  <h2>Downloads</h2>
-  <ul>
-    <li><a href="OmarObaidi_CS499_ProfessionalSelfAssessment.docx">Professional Self-Assessment (DOCX)</a></li>
-    <li><a href="OmarObaidi_CS499_Narrative_ArtifactNarratives.docx">Artifact Narratives (DOCX)</a></li>
-  </ul>
+        <h2 style="margin-top:24px">Notes</h2>
+        <p>
+          Artifacts originate from the <em>Travlr Getaways</em> project and were enhanced to demonstrate:
+          environment configuration &amp; MVC design, optimized data handling/queries, and Mongoose schema validation and seeding.
+        </p>
+      </aside>
+    </div>
+  </main>
 
-  <p><em>Developed and submitted by Omar Obaidi, 2025.</em></p>
+  <footer>
+    © 2025 Omar Obaidi • CS 499 ePortfolio • GitHub Pages
+  </footer>
 </body>
 </html>
+
 
